fix scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,17 @@
   }
 }
 
+::-webkit-scrollbar {
+  width: 0 !important;
+  height: 0px !important;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+::-webkit-scrollbar-track {
+  background: hsla(0, 0%, 100%, 0.1);
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -112,43 +123,3 @@ body {
 /* document.addEventListener('DOMContentLoaded', function() {
   document.documentElement.classList.remove('no-transition');
 }); */
-
-/* For Webkit browsers (Chrome, Safari) */
-.scrollbar-thin::-webkit-scrollbar {
-  width: 8px;
-}
-
-.scrollbar-thin::-webkit-scrollbar-track {
-  background: #e5e7eb; 
-}
-
-.scrollbar-thin::-webkit-scrollbar-thumb {
-  background-color: #4b5563; 
-  border-radius: 20px;
-  border: 2px solid #e5e7eb; 
-}
-
-/* For Firefox */
-.scrollbar-thin {
-  width: 8px;
-  scrollbar-width: auto;
-  scrollbar-color: #4b5563 #e5e7eb; 
-}
-
-/* For Internet Explorer and Edge */
-.scrollbar-thin {
-  -ms-overflow-style: none;
-}
-
-.scrollbar-thin::-ms-scrollbar {
-  width: 8px;
-}
-
-.scrollbar-thin::-ms-scrollbar-track {
-  background: #e5e7eb; 
-}
-
-.scrollbar-thin::-ms-scrollbar-thumb {
-  background-color: #4b5563; 
-  border-radius: 20px;
-}
